Grammar updates to validation.ipynb

--- a/docs/source/notebooks/validation.ipynb
+++ b/docs/source/notebooks/validation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Validation\n",
     "\n",
-    "This document shows how the shading calculations using the ``twoaxistracking`` package compares to values calculated with existing methods found in the literature. Specifically, the annual shading loss is compared with the values presented in Cumpston and Pye (2014) for eight different field layouts. The reference study (Cumpston and Pye, 2014) utilized the algorithm developed by Meller (2010), which has previously been compared to results from Pons & Dugan (1984).\n",
+    "This document shows how the shading calculations using the ``twoaxistracking`` package compare to existing methods found in the literature. Specifically, the annual shading loss is calculated for nine different field layouts and compared with the values presented in Cumpston and Pye (2014). The reference study (Cumpston and Pye, 2014) utilized the algorithm developed by Meller (2010), which has previously been compared to results from Pons & Dugan (1984).\n",
     "\n",
     "Import necessary packages:"
    ]
@@ -78,9 +78,9 @@
     "<br>\n",
     "\n",
     "## Reference dataset\n",
-    "The simulations carried out in the reference study were based on the 1976 irradiance dataset from Barstow as described in [Reference irradiance dataset](reference_dataset.ipynb) section.\n",
+    "The simulations carried out in the reference study were based on the 1976 irradiance dataset from Barstow, as described in [Reference irradiance dataset](reference_dataset.ipynb) section.\n",
     "\n",
-    "Load the quality controlled dataset:"
+    "Load the quality-controlled dataset:"
    ]
   },
   {
@@ -275,12 +275,12 @@
     "\n",
     "## Field layouts\n",
     "\n",
-    "Cumpston and Pye (2010) provided the annual shading loss (ASL) for the optimal layout for eight different ground coverage ratios (GCR). The field layout parameters and their annual shading loss were:"
+    "Cumpston and Pye (2010) provided the annual shading loss (ASL) for the optimal layout for nine different ground coverage ratios (GCR). The field layout parameters and their annual shading loss were:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {
     "tags": [
      "hide-input"
@@ -319,7 +319,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.1</td>\n",
-       "      <td>2.300000</td>\n",
+       "      <td>2.30</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.04</td>\n",
@@ -327,7 +327,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.2</td>\n",
-       "      <td>1.610000</td>\n",
+       "      <td>1.61</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.53</td>\n",
@@ -335,7 +335,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.3</td>\n",
-       "      <td>1.110000</td>\n",
+       "      <td>1.11</td>\n",
        "      <td>1.0</td>\n",
        "      <td>-0.5</td>\n",
        "      <td>4.50</td>\n",
@@ -343,7 +343,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.4</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>1.00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.5</td>\n",
        "      <td>8.14</td>\n",
@@ -351,7 +351,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.866025</td>\n",
+       "      <td>0.87</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.5</td>\n",
        "      <td>12.40</td>\n",
@@ -359,7 +359,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>0.6</td>\n",
-       "      <td>0.866025</td>\n",
+       "      <td>0.87</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.5</td>\n",
        "      <td>17.20</td>\n",
@@ -367,7 +367,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>0.7</td>\n",
-       "      <td>0.866025</td>\n",
+       "      <td>0.87</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.5</td>\n",
        "      <td>22.30</td>\n",
@@ -375,7 +375,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>0.8</td>\n",
-       "      <td>0.866025</td>\n",
+       "      <td>0.87</td>\n",
        "      <td>89.0</td>\n",
        "      <td>-0.5</td>\n",
        "      <td>27.60</td>\n",
@@ -383,7 +383,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>0.9</td>\n",
-       "      <td>0.866025</td>\n",
+       "      <td>0.87</td>\n",
        "      <td>167.0</td>\n",
        "      <td>-0.5</td>\n",
        "      <td>33.10</td>\n",
@@ -394,18 +394,18 @@
       ],
       "text/plain": [
        "   gcr  aspect_ratio  rotation  offset  asl_cumpston\n",
-       "0  0.1      2.300000       0.0     0.0          0.04\n",
-       "1  0.2      1.610000       0.0     0.0          1.53\n",
-       "2  0.3      1.110000       1.0    -0.5          4.50\n",
-       "3  0.4      1.000000       0.0    -0.5          8.14\n",
-       "4  0.5      0.866025       0.0    -0.5         12.40\n",
-       "5  0.6      0.866025       0.0    -0.5         17.20\n",
-       "6  0.7      0.866025       0.0    -0.5         22.30\n",
-       "7  0.8      0.866025      89.0    -0.5         27.60\n",
-       "8  0.9      0.866025     167.0    -0.5         33.10"
+       "0  0.1          2.30       0.0     0.0          0.04\n",
+       "1  0.2          1.61       0.0     0.0          1.53\n",
+       "2  0.3          1.11       1.0    -0.5          4.50\n",
+       "3  0.4          1.00       0.0    -0.5          8.14\n",
+       "4  0.5          0.87       0.0    -0.5         12.40\n",
+       "5  0.6          0.87       0.0    -0.5         17.20\n",
+       "6  0.7          0.87       0.0    -0.5         22.30\n",
+       "7  0.8          0.87      89.0    -0.5         27.60\n",
+       "8  0.9          0.87     167.0    -0.5         33.10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,8 @@
     "        [0.7, np.sqrt(3)/2, 0.0, -0.5, 22.3],\n",
     "        [0.8, np.sqrt(3)/2, 89.0, -0.5, 27.6],\n",
     "        [0.9, np.sqrt(3)/2, 167.0, -0.5, 33.1]])\n",
-    "dfc"
+    "\n",
+    "dfc.round(2)"
    ]
   },
   {
@@ -432,7 +433,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "For comparison the annual shading loss for the eight field layouts is therefore calculated using the `twoaxistracking` package:"
+    "For comparison the annual shading loss for the nine field layouts is therefore calculated using the `twoaxistracking` package:"
    ]
   },
   {
@@ -478,12 +479,12 @@
     "<br>\n",
     "\n",
     "### Comparison of annual shading loss\n",
-    "The annual shading loss (ASL) presented in Cumpston and Pye (2014) and those calculated using the `twoaxistracking` package are shown below. The deviation between the shading fractions are presented both in absolute and relative terms."
+    "The annual shading loss (ASL) presented in Cumpston and Pye (2014) and those calculated using the `twoaxistracking` package are shown below. The deviations between the shading fractions are presented both in absolute and relative terms."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {
     "tags": [
      "hide-input"
@@ -606,7 +607,7 @@
        "0.9      33.10 %             32.90 %            -0.20 %            -0.60 %"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +628,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the comparison above, it is evident that the difference between the annual shading losses is very low (always lower than 1.3%). The discrepancies are believed to be due to minor differences in the quality control procedure applied to reference data."
+    "The comparison above shows that the differences between the annual shading losses are very low (always lower than 1.3%). The discrepancies are believed to be due to minor differences in the quality control procedure applied to reference data."
    ]
   },
   {
