Update validation with Ioanni's inputs

--- a/docs/source/notebooks/validation.ipynb
+++ b/docs/source/notebooks/validation.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# Validation\n",
     "\n",
-    "This document shows how the shading calculations using the ``twoaxistracking`` package compare to existing methods found in the literature. Specifically, the annual shading loss is calculated for nine different field layouts and compared with the values presented in Cumpston and Pye (2014). The reference study (Cumpston and Pye, 2014) utilized the algorithm developed by Meller (2010), which has previously been compared to results from Pons & Dugan (1984).\n",
+    "This document shows how the shading calculations using the ``twoaxistracking`` package compare to existing methods found in the literature. Specifically, the annual shading loss is calculated for nine different field layouts and compared with the values presented in Cumpston and Pye (2014).\n",
     "\n",
     "Import necessary packages:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,27 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collector area: 1.0\n",
-      "Collector L_min: 1.13\n"
-     ]
-    },
     {
      "data": {
       "image/svg+xml": [
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.6093247502315768 -0.6093247502315768 1.2186495004631537 1.2186495004631537\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.024372990009263074\" opacity=\"0.6\" d=\"M 0.5641895835477563,0.0 L 0.5614728564942745,-0.055300249583076784 L 0.5533488389004679,-0.11006792753247706 L 0.539895769496805,-0.16377559117048995 L 0.5212432086958386,-0.21590600633668597 L 0.4975707908546091,-0.26595712863563087 L 0.4691064942975874,-0.3134469383988593 L 0.43612444576078485,-0.35791808279778053 L 0.3989422804014327,-0.3989422804014327 L 0.35791808279778053,-0.4361244457607848 L 0.31344693839885934,-0.4691064942975874 L 0.265957128635631,-0.49757079085460904 L 0.215906006336686,-0.5212432086958386 L 0.16377559117048995,-0.5398957694968051 L 0.11006792753247711,-0.5533488389004679 L 0.055300249583076874,-0.5614728564942744 L 3.4546648380201897e-17,-0.5641895835477563 L -0.055300249583076805,-0.5614728564942745 L -0.11006792753247703,-0.5533488389004679 L -0.16377559117048984,-0.5398957694968051 L -0.21590600633668594,-0.5212432086958386 L -0.2659571286356309,-0.4975707908546091 L -0.3134469383988591,-0.46910649429758744 L -0.3579180827977805,-0.4361244457607849 L -0.39894228040143265,-0.3989422804014327 L -0.43612444576078485,-0.35791808279778053 L -0.46910649429758744,-0.3134469383988593 L -0.49757079085460904,-0.265957128635631 L -0.5212432086958386,-0.21590600633668602 L -0.539895769496805,-0.16377559117048998 L -0.5533488389004679,-0.11006792753247727 L -0.5614728564942744,-0.05530024958307691 L -0.5641895835477563,-6.909329676040379e-17 L -0.5614728564942745,0.05530024958307678 L -0.5533488389004679,0.11006792753247713 L -0.5398957694968051,0.16377559117048981 L -0.5212432086958387,0.21590600633668589 L -0.4975707908546091,0.26595712863563087 L -0.4691064942975875,0.3134469383988591 L -0.4361244457607849,0.3579180827977804 L -0.39894228040143276,0.39894228040143265 L -0.3579180827977808,0.4361244457607847 L -0.3134469383988593,0.4691064942975874 L -0.265957128635631,0.49757079085460904 L -0.21590600633668627,0.5212432086958385 L -0.16377559117049,0.539895769496805 L -0.1100679275324773,0.5533488389004679 L -0.0553002495830767,0.5614728564942745 L -1.0363994514060568e-16,0.5641895835477563 L 0.05530024958307649,0.5614728564942745 L 0.1100679275324771,0.5533488389004679 L 0.1637755911704898,0.5398957694968051 L 0.21590600633668608,0.5212432086958385 L 0.26595712863563087,0.4975707908546091 L 0.31344693839885907,0.4691064942975875 L 0.35791808279778065,0.4361244457607848 L 0.3989422804014326,0.39894228040143276 L 0.43612444576078463,0.3579180827977808 L 0.4691064942975874,0.3134469383988593 L 0.497570790854609,0.26595712863563103 L 0.5212432086958385,0.2159060063366863 L 0.539895769496805,0.16377559117049004 L 0.5533488389004679,0.11006792753247734 L 0.5614728564942745,0.05530024958307673 L 0.5641895835477563,0.0 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x1f4f8340088>"
+       "<shapely.geometry.polygon.Polygon at 0x1d28ab58548>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,11 +55,6 @@
     "radius = np.sqrt(1/np.pi)  # radius for a circle with an area of 1\n",
     "collector_geometry = geometry.Point(0,0).buffer(radius)\n",
     "\n",
-    "collector_area = collector_geometry.area\n",
-    "L_min = 2*collector_geometry.hausdorff_distance(geometry.Point(0, 0))\n",
-    "\n",
-    "print(\"Collector area: %2.1f\"% collector_area)\n",
-    "print(\"Collector L_min: %1.2f\"% L_min)\n",
     "collector_geometry"
    ]
   },
@@ -78,7 +65,9 @@
     "<br>\n",
     "\n",
     "## Reference dataset\n",
-    "The simulations carried out in the reference study were based on the 1976 irradiance dataset from Barstow, as described in [Reference irradiance dataset](reference_dataset.ipynb) section.\n",
+    "The simulations carried out in the reference study were based on the 1976 irradiance dataset from Barstow.\n",
+    "\n",
+    "A stringent quality-control of this dataset was carried out as described in the [Reference irradiance dataset](reference_dataset.ipynb) section. This step was necessary as the dataset contained several periods of erroneous data, e.g., irradiance at night and periods with unfeasible irradiance levels.\n",
     "\n",
     "Load the quality-controlled dataset:"
    ]
@@ -252,7 +241,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "It is important to note that the reference study only performed simulations \"for solar elevation angles greater than 10° as in Meller (2010) and Pons and Dugan (1984)\".\n",
+    "Furthermore, it is important to note that the reference study only performed simulations \"for solar elevation angles greater than 10°\".\n",
     "\n",
     "Therefore, a new column of the direct normal irradiance (DNI) is derived where the irradiance below 10° elevation is set to zero."
    ]
@@ -275,12 +264,12 @@
     "\n",
     "## Field layouts\n",
     "\n",
-    "Cumpston and Pye (2010) provided the annual shading loss (ASL) for the optimal layout for nine different ground coverage ratios (GCR). The field layout parameters and their annual shading loss were:"
+    "Cumpston and Pye (2010) provided the annual shading loss (ASL) for nine different field layouts (GCR ranging from 0.1 to 0.9). The field layout parameters and their annual shading loss were:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "hide-input"
@@ -405,7 +394,7 @@
        "8  0.9          0.87     167.0    -0.5         33.10"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,12 +422,12 @@
    "source": [
     "<br>\n",
     "\n",
-    "For comparison the annual shading loss for the nine field layouts is therefore calculated using the `twoaxistracking` package:"
+    "For comparison the annual shading loss for the nine field layouts were therefore calculated using the `twoaxistracking` package:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "hide-input"
@@ -530,8 +519,8 @@
        "      <th>0.1</th>\n",
        "      <td>0.04 %</td>\n",
        "      <td>0.04 %</td>\n",
-       "      <td>0.00 %</td>\n",
-       "      <td>0.00 %</td>\n",
+       "      <td>-0.00 %</td>\n",
+       "      <td>-11.50 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.2</th>\n",
@@ -596,7 +585,7 @@
       "text/plain": [
        "    asl_cumpston asl_twoaxistracking absolute_deviation relative_deviation\n",
        "gcr                                                                       \n",
-       "0.1       0.04 %              0.04 %             0.00 %             0.00 %\n",
+       "0.1       0.04 %              0.04 %            -0.00 %           -11.50 %\n",
        "0.2       1.53 %              1.51 %            -0.02 %            -1.31 %\n",
        "0.3       4.50 %              4.49 %            -0.01 %            -0.22 %\n",
        "0.4       8.14 %              8.09 %            -0.05 %            -0.61 %\n",
@@ -607,7 +596,7 @@
        "0.9      33.10 %             32.90 %            -0.20 %            -0.60 %"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +617,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The comparison above shows that the differences between the annual shading losses are very low (always lower than 1.3%). The discrepancies are believed to be due to minor differences in the quality control procedure applied to reference data."
+    "The comparison above shows that the differences between the annual shading losses are very low (always lower than 1.3%). The discrepancies are believed to be due to minor differences in the quality control procedure applied to reference data.\n",
+    "\n",
+    "The reference study (Cumpston and Pye, 2014) utilized the shading calculation algorithm developed by Meller (2010). Meller's algorithm has previously been compared to results from Pons & Dugan (1984)."
    ]
   },
   {
