Implement suggestions from kanderso-nrel

--- a/docs/source/notebooks/validation.ipynb
+++ b/docs/source/notebooks/validation.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,10 +43,10 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.6093247502315768 -0.6093247502315768 1.2186495004631537 1.2186495004631537\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.024372990009263074\" opacity=\"0.6\" d=\"M 0.5641895835477563,0.0 L 0.5614728564942745,-0.055300249583076784 L 0.5533488389004679,-0.11006792753247706 L 0.539895769496805,-0.16377559117048995 L 0.5212432086958386,-0.21590600633668597 L 0.4975707908546091,-0.26595712863563087 L 0.4691064942975874,-0.3134469383988593 L 0.43612444576078485,-0.35791808279778053 L 0.3989422804014327,-0.3989422804014327 L 0.35791808279778053,-0.4361244457607848 L 0.31344693839885934,-0.4691064942975874 L 0.265957128635631,-0.49757079085460904 L 0.215906006336686,-0.5212432086958386 L 0.16377559117048995,-0.5398957694968051 L 0.11006792753247711,-0.5533488389004679 L 0.055300249583076874,-0.5614728564942744 L 3.4546648380201897e-17,-0.5641895835477563 L -0.055300249583076805,-0.5614728564942745 L -0.11006792753247703,-0.5533488389004679 L -0.16377559117048984,-0.5398957694968051 L -0.21590600633668594,-0.5212432086958386 L -0.2659571286356309,-0.4975707908546091 L -0.3134469383988591,-0.46910649429758744 L -0.3579180827977805,-0.4361244457607849 L -0.39894228040143265,-0.3989422804014327 L -0.43612444576078485,-0.35791808279778053 L -0.46910649429758744,-0.3134469383988593 L -0.49757079085460904,-0.265957128635631 L -0.5212432086958386,-0.21590600633668602 L -0.539895769496805,-0.16377559117048998 L -0.5533488389004679,-0.11006792753247727 L -0.5614728564942744,-0.05530024958307691 L -0.5641895835477563,-6.909329676040379e-17 L -0.5614728564942745,0.05530024958307678 L -0.5533488389004679,0.11006792753247713 L -0.5398957694968051,0.16377559117048981 L -0.5212432086958387,0.21590600633668589 L -0.4975707908546091,0.26595712863563087 L -0.4691064942975875,0.3134469383988591 L -0.4361244457607849,0.3579180827977804 L -0.39894228040143276,0.39894228040143265 L -0.3579180827977808,0.4361244457607847 L -0.3134469383988593,0.4691064942975874 L -0.265957128635631,0.49757079085460904 L -0.21590600633668627,0.5212432086958385 L -0.16377559117049,0.539895769496805 L -0.1100679275324773,0.5533488389004679 L -0.0553002495830767,0.5614728564942745 L -1.0363994514060568e-16,0.5641895835477563 L 0.05530024958307649,0.5614728564942745 L 0.1100679275324771,0.5533488389004679 L 0.1637755911704898,0.5398957694968051 L 0.21590600633668608,0.5212432086958385 L 0.26595712863563087,0.4975707908546091 L 0.31344693839885907,0.4691064942975875 L 0.35791808279778065,0.4361244457607848 L 0.3989422804014326,0.39894228040143276 L 0.43612444576078463,0.3579180827977808 L 0.4691064942975874,0.3134469383988593 L 0.497570790854609,0.26595712863563103 L 0.5212432086958385,0.2159060063366863 L 0.539895769496805,0.16377559117049004 L 0.5533488389004679,0.11006792753247734 L 0.5614728564942745,0.05530024958307673 L 0.5641895835477563,0.0 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x1d28ab58548>"
+       "<shapely.geometry.polygon.Polygon at 0x258c7b2fd88>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "hide-input"
@@ -519,8 +519,8 @@
        "      <th>0.1</th>\n",
        "      <td>0.04 %</td>\n",
        "      <td>0.04 %</td>\n",
-       "      <td>-0.00 %</td>\n",
-       "      <td>-11.50 %</td>\n",
+       "      <td>0.00 %</td>\n",
+       "      <td>0.00 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.2</th>\n",
@@ -585,7 +585,7 @@
       "text/plain": [
        "    asl_cumpston asl_twoaxistracking absolute_deviation relative_deviation\n",
        "gcr                                                                       \n",
-       "0.1       0.04 %              0.04 %            -0.00 %           -11.50 %\n",
+       "0.1       0.04 %              0.04 %             0.00 %             0.00 %\n",
        "0.2       1.53 %              1.51 %            -0.02 %            -1.31 %\n",
        "0.3       4.50 %              4.49 %            -0.01 %            -0.22 %\n",
        "0.4       8.14 %              8.09 %            -0.05 %            -0.61 %\n",
@@ -596,14 +596,15 @@
        "0.9      33.10 %             32.90 %            -0.20 %            -0.60 %"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Limit asl_twoaxistracking to three significant figures\n",
-    "dfc['asl_twoaxistracking'] = dfc['asl_twoaxistracking'].apply(lambda s: f\"{s:.3g}\").astype(float)\n",
+    "# Limit asl_twoaxistracking to three significant figures and two decimal places\n",
+    "dfc['asl_twoaxistracking'] = dfc['asl_twoaxistracking'].\\\n",
+    "    apply(lambda s: f\"{s:.3g}\").astype(float).round(2)\n",
     "# Calculate absolute and relatieve deviation\n",
     "dfc['absolute_deviation'] = (dfc['asl_twoaxistracking'] - dfc['asl_cumpston'])\n",
     "dfc['relative_deviation'] = (dfc['asl_twoaxistracking'] - dfc['asl_cumpston']).\\\n",
