Revert "Squashed commit of the following:"
This reverts commit 46fbb1e0e73e0d852b26e1781306f7a55af92b98.

--- a/docs/source/notebooks/reference_dataset.ipynb
+++ b/docs/source/notebooks/reference_dataset.ipynb
@@ -882,23 +882,16 @@
     "## References\n",
     "\n",
     "\n",
-    "[Apley, W.J., 1979. SHADE - A computer model for evaluating the optical performance of two-axis tracking parabolic concentrators, in: American Society of Mechanical Engineers (Paper). pp. 1–7.](https://www.osti.gov/servlets/purl/5654301)\n",
+    "Apley, W.J., 1979. SHADE - A computer model for evaluating the optical performance of two-axis tracking parabolic concentrators, in: American Society of Mechanical Engineers (Paper). pp. 1–7.\n",
     "\n",
-    "[Cumpston, J., Pye, J., 2014. Shading and land use in regularly-spaced sun-tracking collectors. Sol. Energy 108, 199–209.](https://doi.org/10.1016/j.solener.2014.06.012)\n",
+    "Cumpston, J., Pye, J., 2014. Shading and land use in regularly-spaced sun-tracking collectors. Sol. Energy 108, 199–209. https://doi.org/10.1016/j.solener.2014.06.012\n",
     "\n",
-    "[Meller, Y., 2010. Analytically calculating shading in regular arrays of sun-pointing collectors. Sol. Energy 84, 1967–1974.](https://doi.org/10.1016/j.solener.2010.08.006)\n",
+    "Meller, Y., 2010. Analytically calculating shading in regular arrays of sun-pointing collectors. Sol. Energy 84, 1967–1974. https://doi.org/10.1016/j.solener.2010.08.006\n",
     "\n",
     "Osborn, D.B., 1980. Generalized Shading Analysis for Parabolodial Collector Fields, in: Energy Technology Conference & Exhibition, American Society of Mechanical Engineers. pp. 1–8.\n",
     "\n",
-    "[Pons, R.L., Dugan, A.F., 1984. The effect of concentrator field layout on the performance of point-focus distributed receiver systems. J. Sol. Energy Eng. Trans. ASME 106, 35–38.](https://doi.org/10.1115/1.3267559)\n"
+    "Pons, R.L., Dugan, A.F., 1984. The effect of concentrator field layout on the performance of point-focus distributed receiver systems. J. Sol. Energy Eng. Trans. ASME 106, 35–38. https://doi.org/10.1115/1.3267559\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -917,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
