Add link to Osborn reference

--- a/docs/source/notebooks/reference_dataset.ipynb
+++ b/docs/source/notebooks/reference_dataset.ipynb
@@ -888,7 +888,7 @@
     "\n",
     "[Meller, Y., 2010. Analytically calculating shading in regular arrays of sun-pointing collectors. Sol. Energy 84, 1967–1974.](https://doi.org/10.1016/j.solener.2010.08.006)\n",
     "\n",
-    "Osborn, D.B., 1980. Generalized Shading Analysis for Parabolodial Collector Fields, in: Energy Technology Conference & Exhibition, American Society of Mechanical Engineers. pp. 1–8.\n",
+    "[Osborn, D.B., 1980. Generalized Shading Analysis for Parabolodial Collector Fields, in: Energy Technology Conference & Exhibition, American Society of Mechanical Engineers. pp. 1–8.](https://ntrs.nasa.gov/citations/19800059174)\n",
     "\n",
     "[Pons, R.L., Dugan, A.F., 1984. The effect of concentrator field layout on the performance of point-focus distributed receiver systems. J. Sol. Energy Eng. Trans. ASME 106, 35–38.](https://doi.org/10.1115/1.3267559)\n"
    ]
