--- a/docs/source/notebooks/validation.ipynb
+++ b/docs/source/notebooks/validation.ipynb
@@ -611,7 +611,7 @@
     "    divide(dfc['asl_cumpston']).multiply(100)\n",
     "\n",
     "result_columns = ['asl_cumpston', 'asl_twoaxistracking', 'absolute_deviation', 'relative_deviation']\n",
-    "dfc.set_index('gcr')[result_columns].round(2).applymap(lambda s: f\"{s:.2f} %\")"
+    "dfc.set_index('gcr')[result_columns].round(2).map(lambda s: f\"{s:.2f} %\")"
    ]
   },
   {
