Add sphinx fail-on-warning to .readthedocs.yml

--- a/docs/source/notebooks/intro_tutorial.ipynb
+++ b/docs/source/notebooks/intro_tutorial.ipynb
@@ -20,6 +20,7 @@
     "import pandas as pd\n",
     "from shapely import geometry\n",
     "import pvlib\n",
+    "import packagenotexist\n",
     "import twoaxistracking"
    ]
   },
